--- a/index.html
+++ b/index.html
@@ -2,77 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Solar Tracker Dashboard</title>
+  <title>IoT Solar Tracking System</title>
 
-  <!-- Chart.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
 
-  <h1>Solar Tracker Monitoring Dashboard</h1>
+<header>
+  <h1>IoT Based Dual-Axis Solar Tracking System</h1>
+  <p>Real-time Monitoring • Intelligent Alerts • Cloud Analytics</p>
+</header>
 
-  <!-- Tabs -->
-  <div class="tabs">
-    <button class="tab-btn active" onclick="openTab('live')">Live</button>
-    <button class="tab-btn" onclick="openTab('graphs')">Graphs</button>
-    <button class="tab-btn" onclick="openTab('alerts')">Alerts</button>
-    <button class="tab-btn" onclick="openTab('about')">About</button>
-  </div>
+<nav>
+  <button onclick="openTab('home')">Home</button>
+  <button onclick="openTab('live')">Live Dashboard</button>
+  <button onclick="openTab('graphs')">Graphs</button>
+  <button onclick="openTab('alerts')">Alerts</button>
+  <button onclick="openTab('architecture')">Architecture</button>
+  <button onclick="openTab('about')">About</button>
+</nav>
 
-  <!-- LIVE TAB -->
-  <div id="live" class="tab-content active">
-    <h2>Live Readings</h2>
+<!-- HOME -->
+<section id="home" class="tab">
+  <h2>Project Overview</h2>
+  <p>
+    This project presents an IoT-enabled dual-axis solar tracking system
+    designed to maximize solar energy harvesting while providing intelligent
+    performance monitoring and alerts.
+  </p>
 
-    <div class="grid">
-      <div class="card">Lux: <span id="lux">--</span></div>
-      <div class="card">Horizontal Error: <span id="hError">--</span></div>
-      <div class="card">Vertical Error: <span id="vError">--</span></div>
-      <div class="card">Servo X: <span id="servoX">--</span>°</div>
-      <div class="card">Servo Y: <span id="servoY">--</span>°</div>
-      <div class="card">Solar Voltage: <span id="solarV">--</span> V</div>
-      <div class="card">Solar Current: <span id="solarI">--</span> mA</div>
-      <div class="card">Battery Voltage: <span id="batteryV">--</span> V</div>
-      <div class="card highlight">Power: <span id="power">--</span> W</div>
+  <div class="info-grid">
+    <div class="info-box">
+      <h3>Dual-Axis Tracking</h3>
+      <p>Tracks the sun in both horizontal and vertical directions using sensors and servo motors.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>IoT Monitoring</h3>
+      <p>ESP8266 uploads real-time system data to the ThingSpeak cloud.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>Intelligent Alerts</h3>
+      <p>Detects low battery, panel dirt, and abnormal performance conditions.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>Energy Saving Mode</h3>
+      <p>Automatically reduces power usage during night or low-light conditions.</p>
     </div>
   </div>
+</section>
 
-  <!-- GRAPHS TAB -->
-  <div id="graphs" class="tab-content">
-    <h2>Historical Graphs</h2>
+<!-- LIVE -->
+<section id="live" class="tab">
+  <h2>Live System Readings</h2>
 
-    <canvas id="luxChart"></canvas>
-    <canvas id="hErrorChart"></canvas>
-    <canvas id="vErrorChart"></canvas>
-    <canvas id="servoXChart"></canvas>
-    <canvas id="servoYChart"></canvas>
-    <canvas id="solarVChart"></canvas>
-    <canvas id="solarIChart"></canvas>
-    <canvas id="batteryVChart"></canvas>
+  <div class="card-grid">
+    <div class="card">Light Intensity (Lux): <span id="lux">--</span></div>
+    <div class="card">Horizontal Error: <span id="hError">--</span></div>
+    <div class="card">Vertical Error: <span id="vError">--</span></div>
+    <div class="card">Servo X Angle: <span id="servoX">--</span>°</div>
+    <div class="card">Servo Y Angle: <span id="servoY">--</span>°</div>
+    <div class="card">Solar Voltage: <span id="solarV">--</span> V</div>
+    <div class="card">Solar Current: <span id="solarI">--</span> A</div>
+    <div class="card highlight">Power Output: <span id="power">--</span> W</div>
+    <div class="card">Battery Voltage: <span id="batteryV">--</span> V</div>
   </div>
+</section>
 
-  <!-- ALERTS TAB -->
-  <div id="alerts" class="tab-content">
-    <h2>System Alerts</h2>
-    <ul id="alertList">
-      <li>No alerts</li>
-    </ul>
-  </div>
+<!-- GRAPHS -->
+<section id="graphs" class="tab">
+  <h2>Historical Data & Analysis</h2>
+  <canvas id="luxChart"></canvas>
+  <canvas id="hErrorChart"></canvas>
+  <canvas id="vErrorChart"></canvas>
+  <canvas id="batteryChart"></canvas>
+</section>
 
-  <!-- ABOUT TAB -->
-  <div id="about" class="tab-content">
-    <h2>About System</h2>
-    <p>
-      Dual-axis solar tracking system using Arduino, ESP8266 and cloud-based
-      monitoring via ThingSpeak. Designed for efficiency monitoring,
-      power optimization, and predictive maintenance.
-    </p>
-  </div>
+<!-- ALERTS -->
+<section id="alerts" class="tab">
+  <h2>System Alerts</h2>
+  <ul id="alertList"></ul>
+</section>
 
-  <!-- JS -->
-  <script src="script.js"></script>
+<!-- ARCHITECTURE -->
+<section id="architecture" class="tab">
+  <h2>System Architecture</h2>
+  <p>
+    The system consists of an Arduino Uno as the control unit, responsible for
+    sensor data acquisition and motor control. An ESP8266 module acts as the IoT
+    gateway, transmitting selected parameters to the cloud.
+  </p>
 
+  <ul>
+    <li>Sensors → Arduino (Decision Making)</li>
+    <li>Arduino → ESP8266 (Serial Communication)</li>
+    <li>ESP8266 → ThingSpeak (Cloud Upload)</li>
+    <li>Website → ThingSpeak API (Data Visualization)</li>
+  </ul>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="tab">
+  <h2>About the Project</h2>
+  <p>
+    This project was developed to demonstrate how embedded systems, IoT, and
+    renewable energy technologies can be integrated to create intelligent
+    energy solutions.
+  </p>
+
+  <p>
+    The system improves energy efficiency, reduces maintenance effort, and
+    provides actionable insights through data analytics.
+  </p>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
