--- a/index.html
+++ b/index.html
@@ -1,96 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Dual Axis Solar Tracker Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Solar Tracker Dashboard</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Dual Axis Solar Tracking System</h1>
+    <nav>
+      <button class="tab active" onclick="openTab('home', this)">Home</button>
+      <button class="tab" onclick="openTab('overview', this)">System Overview</button>
+      <button class="tab" onclick="openTab('live', this)">Live Dashboard</button>
+      <button class="tab" onclick="openTab('history', this)">History</button>
+      <button class="tab" onclick="openTab('alerts', this)">Alerts</button>
+      <button class="tab" onclick="openTab('power', this)">Power & Control</button>
+      <button class="tab" onclick="openTab('about', this)">About</button>
+    </nav>
+  </header>
 
-<header>
-  <h1>Dual Axis Solar Tracking System</h1>
-  <nav>
-    <button class="tab active" onclick="openTab('home')">Home</button>
-    <button class="tab" onclick="openTab('overview')">System Overview</button>
-    <button class="tab" onclick="openTab('live')">Live Dashboard</button>
-    <button class="tab" onclick="openTab('history')">History</button>
-    <button class="tab" onclick="openTab('alerts')">Alerts</button>
-    <button class="tab" onclick="openTab('power')">Power & Control</button>
-    <button class="tab" onclick="openTab('about')">About</button>
-  </nav>
-</header>
+  <main>
+    <section id="home" class="tab-content active">
+      <h2>Welcome</h2>
+      <p>This project implements an intelligent dual-axis solar tracking system integrated with IoT-based monitoring, power management, and remote control.</p>
+      <img src="project_photo.jpg" alt="Project Photo" style="max-width:100%;margin-top:15px" />
+      <h3>Block Diagram</h3>
+      <img src="block_diagram.png" alt="Block Diagram" style="max-width:100%;margin-top:10px" />
+      <h3>Circuit Diagram</h3>
+      <img src="circuit_diagram.png" alt="Circuit Diagram" style="max-width:100%;margin-top:10px" />
+    </section>
 
-<main>
+    <section id="overview" class="tab-content">
+      <h2>System Overview</h2>
+      <p>Arduino Uno controls sensors and motors; ESP8266 handles WiFi and ThingSpeak communication.</p>
+      <p>Sensors include BH1750 (light intensity), LDRs for directional light sensing, INA219 for current measurement, and voltage sensing on ESP analog input.</p>
+      <p>Servos adjust the solar panel’s position based on sensor data. Power management includes two batteries with relay switching.</p>
+    </section>
 
-<section id="home" class="tab-content active">
-  <img src="images/project.jpg" class="hero">
-  <div class="cards">
-    <div class="card">Dual Axis Tracking</div>
-    <div class="card">IoT Monitoring</div>
-    <div class="card">Power Saving Mode</div>
-    <div class="card">Auto + Manual Control</div>
-  </div>
-</section>
+    <section id="live" class="tab-content">
+      <h2>Live Dashboard</h2>
+      <iframe width="100%" height="300" src="https://thingspeak.com/channels/YOUR_CHANNEL_ID/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line"></iframe>
+      <iframe width="100%" height="300" src="https://thingspeak.com/channels/YOUR_CHANNEL_ID/charts/2?bgcolor=%23ffffff&color=%23009f40&dynamic=true&results=60&type=line"></iframe>
+      <iframe width="100%" height="300" src="https://thingspeak.com/channels/YOUR_CHANNEL_ID/charts/3?bgcolor=%23ffffff&color=%230073bf&dynamic=true&results=60&type=line"></iframe>
+      <iframe width="100%" height="300" src="https://thingspeak.com/channels/YOUR_CHANNEL_ID/charts/4?bgcolor=%23ffffff&color=%23ff8c00&dynamic=true&results=60&type=line"></iframe>
+    </section>
 
-<section id="overview" class="tab-content">
-  <h2>System Overview</h2>
-  <img src="images/block.png">
-  <img src="images/circuit.png">
-  <p>
-    This system is a dual-axis solar tracking and monitoring platform designed to
-    maximize solar energy harvesting while intelligently managing power usage.
-    The Arduino Uno acts as the main controller, handling sensor acquisition,
-    servo positioning, relay control, and safety logic. An ESP8266 module provides
-    internet connectivity, enabling real-time data upload to ThingSpeak and
-    remote dashboard interaction.
-  </p>
-</section>
+    <section id="history" class="tab-content">
+      <h2>History & Analysis</h2>
+      <p>Review past data and analyze system performance.</p>
+    </section>
 
-<section id="live" class="tab-content">
-  <h2>Live Dashboard</h2>
-  <iframe src="https://thingspeak.com/channels/YOUR_CHANNEL_ID/charts/1"></iframe>
-  <iframe src="https://thingspeak.com/channels/YOUR_CHANNEL_ID/charts/2"></iframe>
-</section>
+    <section id="alerts" class="tab-content">
+      <h2>Alerts</h2>
+      <p>Cleaning alerts, low battery warnings, and system notifications will be displayed here.</p>
+    </section>
 
-<section id="history" class="tab-content">
-  <h2>History & Analysis</h2>
-  <p>
-    Historical data allows analysis of tracking accuracy, environmental impact,
-    and energy efficiency across different weather conditions and times of day.
-  </p>
-</section>
+    <section id="power" class="tab-content">
+      <h2>Power & Control</h2>
 
-<section id="alerts" class="tab-content">
-  <h2>System Alerts</h2>
-  <div class="card">Panel Cleaning Alert</div>
-  <div class="card">Low Battery Warning</div>
-</section>
+      <div class="card">
+        <p><b>System Mode:</b> <span id="modeStatus">AUTO</span></p>
+        <button onclick="sendCommand('AUTO')">AUTO Mode</button>
+        <button onclick="sendCommand('MANUAL')">MANUAL Mode</button>
+      </div>
 
-<section id="power" class="tab-content">
-  <h2>Power & Control</h2>
-  <div class="card">
-    <p>Mode:</p>
-    <button onclick="sendCommand('AUTO')">Auto</button>
-    <button onclick="sendCommand('MANUAL')">Manual</button>
-  </div>
-  <div class="card">
-    <button onclick="sendCommand('BAT1')">Switch to Battery 1</button>
-    <button onclick="sendCommand('BAT2')">Switch to Battery 2</button>
-  </div>
-</section>
+      <div class="card">
+        <p><b>Active Battery:</b> <span id="batteryStatus">NONE</span></p>
+        <button onclick="sendCommand('BAT1')">Battery 1</button>
+        <button onclick="sendCommand('BAT2')">Battery 2</button>
+      </div>
 
-<section id="about" class="tab-content">
-  <h2>About This Project</h2>
-  <p>
-    This project demonstrates an intelligent renewable energy system that combines
-    mechanical tracking, sensor fusion, IoT analytics, and power management.
-    It is designed to reduce energy losses, extend battery life, and provide
-    actionable insights through real-time monitoring and alerts.
-  </p>
-</section>
+      <p style="color:#666; font-size:0.9em;">
+        Note: In AUTO mode, battery switching commands may be ignored by Arduino.
+      </p>
+    </section>
 
-</main>
+    <section id="about" class="tab-content">
+      <h2>About Project</h2>
+      <p>
+        The dual-axis solar tracking system improves energy harvest by continuously adjusting the panel to face the sun.
+        It leverages real-time sensor data, cloud monitoring, and remote control to optimize performance and reliability.
+      </p>
+    </section>
+  </main>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
