--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <!-- Historical Data Tab -->
             <div id="history" class="tab-content">
-                <h2 style="margin-bottom: 20px;">📈 Historical Trends (ThingSpeak)</h2>
+                <h2 style="margin-bottom: 20px;">📈 Historical Trends </h2>
 
                 <!-- Compact 2-column grid for individual graphs -->
                 <div class="charts-grid">
@@ -367,3 +367,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
