--- a/index.html
+++ b/index.html
@@ -309,14 +309,14 @@
                 <div class="info-section">
                     <h3>Key Features</h3>
                     <ul>
-                        <li>✅ Real-time dual-axis sun tracking</li>
-                        <li>✅ Cloud-based monitoring via ThingSpeak</li>
-                        <li>✅ Smart cleaning alerts using dual-sensor validation</li>
-                        <li>✅ Automatic power saving during night/cloudy periods</li>
-                        <li>✅ Remote battery management</li>
-                        <li>✅ Comprehensive data logging and visualization</li>
-                        <li>✅ Cross-platform web dashboard (mobile & desktop)</li>
-                        <li>✅ Real-time alerts and notifications</li>
+                        <li> Real-time dual-axis sun tracking</li>
+                        <li> Cloud-based monitoring via ThingSpeak</li>
+                        <li> Smart cleaning alerts using dual-sensor validation</li>
+                        <li> Automatic power saving during night/cloudy periods</li>
+                        <li> Remote battery management</li>
+                        <li> Comprehensive data logging and visualization</li>
+                        <li> Cross-platform web dashboard (mobile & desktop)</li>
+                        <li> Real-time alerts and notifications</li>
                     </ul>
                 </div>
 
@@ -367,4 +367,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
