--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Navigation Tabs -->
         <div class="tabs">
             <button class="tab active" onclick="switchTab('live')">📊 Live Readings</button>
-            <button class="tab" onclick="switchTab('history')">📈 Historical Data</button>
+            <button class="tab" onclick="switchTab('history')">📈 Past Readings</button>
             <button class="tab" onclick="switchTab('alerts')">🔔 Alerts</button>
             <button class="tab" onclick="switchTab('control')">🎛️ Controls</button>
             <button class="tab" onclick="switchTab('about')">ℹ️ About</button>
@@ -126,7 +126,7 @@
 
             <!-- Historical Data Tab -->
             <div id="history" class="tab-content">
-                <h2 style="margin-bottom: 20px;">📈 Historical Trends </h2>
+                <h2 style="margin-bottom: 20px;">📈 Past Trends </h2>
 
                 <!-- Compact 2-column grid for individual graphs -->
                 <div class="charts-grid">
@@ -367,5 +367,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
